# cogent-delta

./: AGENTS.md  BLOCKING.md  CLAUDE.md  COGAMES_ISSUE.md  COGENT.md  IMPROVE.md  README.md  SCISSORS_UPLOADS.md  STATUS.md  pyproject.toml  run_test_011.sh
.coach/: state.json  todos.md
.github/workflows/: pages.yml  tests.yml
cogames/cvc/: game_state.py
cogent/: IDENTITY.md  MEMORY.md  memory.md  state.json  test_in_progress.md  test_in_progress_012_delta.md  todos.md
cogent/dashboard/: index.html
cogent/hooks/: on-sleep.md  on-wake.md
cogent/skills/: cogames.md
docs/: architecture.md  coach-dashboard.html  cogames.md  coglet.md  cvc.md  ideas.md  improvements.md
examples/jury_llm.cog/: jury_llm.py
examples/jury_trial_llm.cog/: trial_llm.py
examples/multi.cog/: manifest.toml  tree.py
memory/: conversation.jsonl
skills/cogamer.configure/: SKILL.md
skills/improve/: SKILL.md
skills/improve.dashboard/: SKILL.md
skills/improve.design/: SKILL.md
skills/improve.pco/: SKILL.md
skills/sleep/: SKILL.md
skills/wakeup/: SKILL.md
src/coglet/: __init__.py  channel.py  cli.py  codelet.py  coglet.py  gitlet.py  handle.py  lifelet.py  loglet.py  mullet.py  runtime.py  shell.py  suppresslet.py  (+3 more)
tests/: test_channel.py  test_cli.py  test_cli_integration.py  test_codelet.py  test_coglet.py  test_cogweb_ui.py  test_game_state.py  test_gitlet.py  test_handle.py  test_integration.py  test_lifelet.py  test_loglet.py  test_mixins.py  test_mullet.py  test_pco_constraint.py  test_runtime.py  test_suppresslet.py  test_ticklet.py  test_trace.py  test_weblet.py
(+23 files in other folders)
