[project]
name = "coglet"
version = "0.1.0"
description = "Fractal asynchronous control for distributed agent systems"
requires-python = ">=3.11"
dependencies = [
    "mettagrid",
    "pydantic",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/coglet", "src/cogweb", "cogames"]

[tool.ty.environment]
extra-paths = ["src", "."]
